unit tests written for all util functions except updateWithAction

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
     "app.css": "^0.1.2",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-testing-library": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
