--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "babel-preset-nano-react-app": "^0.1.0",
+    "jest-dom": "^4.0.0",
     "parcel-bundler": "^1.12.3"
   },
   "babel": {
