--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "app.css": "^0.1.2",
+    "jest": "^24.9.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-testing-library": "^8.0.1"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "babel-preset-nano-react-app": "^0.1.0",
+    "jest": "^24.9.0",
     "jest-dom": "^4.0.0",
     "parcel-bundler": "^1.12.3"
   },
